<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_divider1">
    <item android:id="@+id/action_all_tasks"
        android:title="@string/allTaskB"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    </group>
    <group android:id="@+id/group_divider2">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"

        android:orderInCategory="100"
        app:showAsAction="never" />
    </group>
    <group android:id="@+id/group_divider3">
    <item android:id="@+id/action_copyright"
        android:title="@string/action_copyright"
        android:orderInCategory="200"
        app:showAsAction="never" />
    </group>


</menu>