<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.LoginActivity">


    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_edit_text_teal"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/styled_email_box"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        android:layout_width="match_parent">
    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/half_rounded_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
         />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/styled_password_box"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/styled_email_box"
        android:layout_width="match_parent">

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/half_rounded_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#3BACB6"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/styled_password_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/remember_device_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:text="Keep me signed in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/forget_password"
        android:textColor="#0065FD"
        app:layout_constraintTop_toBottomOf="@id/remember_device_checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#36AE7C"
        android:text="@string/create_new_account"
        app:layout_constraintTop_toBottomOf="@+id/forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>