<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/silver"

    >

    <TextView

        android:id="@+id/username_welcoming"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:textColor="@color/black"

        />

    <TextView

        android:id="@+id/task_word_username_welcoming"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/username_welcoming"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginEnd="80dp"
        android:text="Tasks"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/view_image"
        app:layout_constraintVertical_bias="1.0" />


    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/addTaskB"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/allTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/teal_700"
        android:text="@string/allTaskB"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/task_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addTaskButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/button_task_detail"
        android:enabled="false"
        android:textColor="@color/white" />


</RelativeLayout>

