<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context=".ui.AddTaskActivity">


    <TextView
        android:id="@+id/addTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="serif"
        android:layout_marginTop="20dp"
        android:text="@string/addTaskB"
        android:textColor="@color/black"
        android:textSize="40sp" />




    <EditText
        android:id="@+id/taskTitleBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addTaskTitle"
        android:backgroundTint="#3BACB6"
        android:layout_alignParentStart="true"
        android:fontFamily="serif"
        android:layout_marginStart="15dp"
        android:textColorHint="#3BACB6"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="50dp"
        android:textColorHighlight="@color/teal_200"
        android:autofillHints=""
        android:hint="@string/task_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/taskDescriptionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_below="@+id/taskTitleBox"
        android:backgroundTint="#3BACB6"
        android:layout_alignParentStart="true"
        android:fontFamily="serif"
        android:layout_marginStart="15dp"
        android:textColorHint="#3BACB6"
        android:textColorHighlight="@color/teal_200"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/task_description"
        android:inputType="textMultiLine" />


    <Spinner
        android:id="@+id/task_states_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_below="@+id/taskDescriptionBox"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        />


    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/add_task_icon"
        android:layout_below="@+id/task_states_spinner"
        android:fontFamily="serif"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="#3BACB6"
        android:textColor="@color/black"
        android:text="@string/addTaskB" />

    <TextView
        android:id="@+id/tasksCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createTaskButton"
        android:layout_marginStart="20dp"
        android:fontFamily="serif"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:background="#F7FF93"
         />
</RelativeLayout>